--- a/front-end/tutorial-canciones/package.json
+++ b/front-end/tutorial-canciones/package.json
@@ -11,10 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.1.3",
+    "@angular/cdk": "^12.2.3",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
     "@angular/core": "~12.1.2",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.1.2",
+    "@angular/material": "^12.2.3",
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
@@ -22,7 +25,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "ngx-toastr": "^14.0.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
