--- a/front-end/tutorial-canciones/angular.json
+++ b/front-end/tutorial-canciones/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "ba97521d-def1-4cbe-88a7-b92abc157bb0"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
