--- a/front-end/tutorial-canciones/angular.json
+++ b/front-end/tutorial-canciones/angular.json
@@ -81,7 +81,10 @@
               "browserTarget": "tutorial-canciones:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
